--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@joi/date": "^2.1.0",
     "connect-flash": "^0.1.1",
     "connect-mssql-v2": "^3.1.2",
     "dotenv": "^16.0.0",
