--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@joi/date": "^2.1.0",
+    "bcrypt": "^5.0.1",
     "connect-flash": "^0.1.1",
     "connect-mssql-v2": "^3.1.2",
     "dotenv": "^16.0.0",
